comenzado split packages